Fixing map display on mobile

--- a/edgeledger/css/mobile.css
+++ b/edgeledger/css/mobile.css
@@ -65,8 +65,7 @@
 
   #contact .map {
     display: block;
-    width: 100%;
-    height: 200px;
+    height: 300px;
     border-top: 4px solid #333;
   }
 }
